@@ -2,23 +2,26 @@
 ## Description
 Dexter is a learning machine virtual assistaint created with NLP (Natural Language Processing), the 
 dataset was create manually by me, so it isn't 100% acurracy and probally has some erros,  
-built-in with voice recognization, voice speaking and translation to englsh using google translator, 
-it has not all the answers. But has some commands like say the current weather, data, hour or
-even open the google the dexter voice is provided by the OS (Operational System), it might change in the future.
+built-in with voice recognization, voice speaking provided by elevenlab and translation to englsh
+using google translator, it has not all the answers. But has some commands like say your location, the current weather,
+data, hour or even open the google the dexter voice is provided by the OS (Operational System), 
+it might change in the future.
 
 ## About dexter
 Dexter was created in 01-15-2025 as a virtual assistent and reason to learn machine-learning and improve my skills
 as programmer, it uses NLP concepts to train the AI like preparing the data training using tokenizeation, steamming,
 and maching-learning concepts like bag of words, neural network, dropout and optmizeation. Dexter "voice" is shown as 
-sin waves rendered by pygame.
+sin waves rendered by pygame and his voice was created with elevenlab.
 
 ## Features
 - Voice recognization in a lot of languages.
 - Has his own GUI pygame based.
+- Own voice generated by elevenlab
 - Speak in a lot of languages.
 - Call you mrs or sir
 - Can open google browser.
 - Can tell the weather, time and day.
+- Can tell where you are
 - Has answer some simple questions like "hi dexter" or "thanks dexter"
 
 ## Usage
